Fix contrast colours

--- a/frontend_src/less/sidebar.less
+++ b/frontend_src/less/sidebar.less
@@ -16,7 +16,7 @@ ul.feed-tree {
     &.active:hover,
     &.active:focus {
       color: #fff;
-      a {
+      a.active-contrast {
         color: #fff;
       }
       background-color: #428bca;
